Vehicle number plate expiration (#43)